--- a/plugin.xml
+++ b/plugin.xml
@@ -35,7 +35,7 @@
         <runs />
       </js-module>
       <config-file target="*-Info.plist" parent="NSLocationWhenInUseUsageDescription">
-            <string>This app needs your location in order to show nearby locations.</string>
+            <string></string>
       </config-file>
     </platform>
 
